--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "SCORE 10yr Risk Model Javascript KO",
   "main": "score10yrRisk.js",
   "dependencies": {
+    "ajv": "^6.10.0",
     "csvtojson": "^2.0.8",
     "jest": "^24.5.0"
   },
