checking in hi hello

--- a/99999-score/v1/deployment-specification.yaml
+++ b/99999-score/v1/deployment-specification.yaml
@@ -1,5 +1,5 @@
 endpoints:
-  /welcome:
+  /score:
     adapterType: JAVASCRIPT
-    artifact: main.js
-    entry: welcome
+    artifact: score.js
+    entry: score10yrRisk
