--- a/99999-score/v1/service-specification.yaml
+++ b/99999-score/v1/service-specification.yaml
@@ -1,14 +1,14 @@
 openapi: 3.0.0
 info:
   version: 1.0.0
-  title: 'New Hello World'
-  description: 'Hello World bundle.v2 with webpack-built payload'
+  title: 'SCORE Project'
+  description: 'Predict 10-year risk of cardiovascular disease'
 servers:
-  - url: '/hello/world/bundle.v2/'
-    description: 'Hello World bundle.v2 with webpack-built payload'
+  - url: '/99999/score/bundle.v1/'
+    description: 'Predict 10-year risk of cardiovascular disease bundle.v1'
 tags:
   - name: KO Endpoints
-    description: Hello World Endpoints
+    description: Score Endpoints
 paths:
   /welcome:
     post:
