--- a/99999-score/v1/service-specification.yaml
+++ b/99999-score/v1/service-specification.yaml
@@ -4,13 +4,13 @@ info:
   title: 'SCORE Project'
   description: 'Predict 10-year risk of cardiovascular disease'
 servers:
-  - url: '/99999/score/bundle.v1/'
+  - url: '/99999/score/v1/'
     description: 'Predict 10-year risk of cardiovascular disease bundle.v1'
 tags:
   - name: KO Endpoints
     description: Score Endpoints
 paths:
-  /welcome:
+  /score:
     post:
       tags:
         - KO Endpoints
