--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-jack.txt
-=======
-CHD_RISK_Score.nb.html
->>>>>>> fb49712ce2f55b1efd4a1ea2ad9e8b921d995280
 .idea/
 /99999-score/v1/node_modules/
+.DS_Store/
