Refactored directory structure, added package and circleci scripts

--- a/99999-score/v1/deployment-specification.yaml
+++ b/99999-score/v1/deployment-specification.yaml
@@ -1,5 +1,5 @@
 endpoints:
   /score:
     adapterType: JAVASCRIPT
-    artifact: ./src/score.js
+    artifact: ./score.js
     entry: score10yrRisk
