--- a/99999-score/service.yaml
+++ b/99999-score/service.yaml
@@ -4,7 +4,7 @@ info:
   title: 'SCORE Project'
   description: 'Predict 10-year risk of cardiovascular disease'
 servers:
-  - url: '/99999/score/v1/'
+  - url: '/99999/score'
     description: 'Predict 10-year risk of cardiovascular disease'
 tags:
   - name: KO Endpoints
