--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "score10yrRisk.js",
   "dependencies": {
     "ajv": "^6.10.0",
-    "csvtojson": "^2.0.8",
-    "jest": "^24.5.0",
-    "jest-junit": "^10.0.0"
+    "csvtojson": "^2.0.8"
   },
   "devDependencies": {
     "jest": "^24.5.0",
