--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "jest": "^24.5.0",
+    "jest-junit": "^10.0.0",
     "rewire": "^4.0.1",
     "@kgrid/cli": "^0.4.3"
   },
