updated to work with new activator 1.5.4

--- a/99999-score/deployment.yaml
+++ b/99999-score/deployment.yaml
@@ -1,5 +1,5 @@
-endpoints:
-  /score:
-    adapter: JAVASCRIPT
-    artifact: ./score.js
+/score:
+  post:
+    engine: javascript
+    artifact: score.js
     function: score10yrRisk
