added quotes to deployment yaml

--- a/99999-score/deployment.yaml
+++ b/99999-score/deployment.yaml
@@ -1,5 +1,5 @@
 /score:
   post:
-    engine: javascript
-    artifact: score.js
-    function: score10yrRisk
+    engine: "javascript"
+    artifact: "score.js"
+    function: "score10yrRisk"
